tests/ui/parser/keyword-abstract.rs
fn main() {
    let abstract = (); //~ ERROR expected identifier, found reserved keyword `abstract`
}

// ferrocene-annotations: fls_lish33a1naw5
// Keywords
//
// ferrocene-annotations: fls_cbsgp6k0qa82
// Reserved Keywords
